start making new data

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="" type="image/x-icon" />
 
-    <title>Jonah Zimmer</title>
+    <title>Rondo Commemorative Plaza</title>
 
     <link rel="stylesheet" href="./styles.css">
     
