--- a/react-app/index.html
+++ b/react-app/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div  id="mainContent"></div>
-    <script src="bundle.js"></script>
+    <script src="dist/bundle.js"></script>
     
 </body>
 </html>
