--- a/react-app/index.html
+++ b/react-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
 
     <title>Rondo Commemorative Plaza</title>
 
